--- a/package.json
+++ b/package.json
@@ -1,53 +1,57 @@
 {
-    "name": "@dhlx/vitepress-plugin-mindmap",
-    "version": "0.0.2",
-    "description": "vitepress plugin mindmap",
-    "type": "module",
-    "files": [
-        "dist",
-        "src/index.d.ts"
-    ],
-    "main": "./dist/index.umd.cjs",
-    "module": "./dist/index.js",
-    "types": "./dist/src/index.d.ts",
-    "exports": {
-        ".": {
-            "types": "./dist/src/index.d.ts",
-            "import": "./dist/index.js",
-            "require": "./dist/index.umd.cjs"
-        },
-        "./MindMapView.vue": "./dist/MindMapView.vue"
+  "name": "@dhlx/vitepress-plugin-mindmap",
+  "version": "0.0.3",
+  "description": "vitepress plugin mindmap",
+  "type": "module",
+  "files": [
+    "dist",
+    "src/index.d.ts"
+  ],
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/src/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/src/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
     },
-    "keywords": [
-        "vitepress",
-        "plugin",
-        "mindmap",
-        "mind"
-    ],
-    "license": "MIT",
-    "scripts": {
-        "dev": "vite build --watch",
-        "build": "vite build",
-        "docs:dev": "vitepress dev docs",
-        "docs:build": "vitepress build docs",
-        "docs:preview": "vitepress preview docs",
-        "prepublish": "npm run build"
-    },
-    "devDependencies": {
-        "@types/node": "^24.0.4",
-        "typescript": "^5.8.3",
-        "vite": "^7.0.0",
-        "vite-plugin-dts": "^4.5.4",
-        "vite-plugin-static-copy": "^3.1.0",
-        "vitepress": "^2.0.0-alpha.0"
-    },
-    "repository": {
-        "url": "git+https://github.com/LiDengHui/vitepress-plugin-mindmap.git",
-        "type": "git"
-    },
-    "dependencies": {
-        "@dhlx/delay": "^0.0.5",
-        "markmap-lib": "^0.18.12",
-        "markmap-view": "^0.18.12"
-    }
+    "./MindMapView.vue": "./dist/MindMapView.vue"
+  },
+  "keywords": [
+    "vitepress",
+    "plugin",
+    "mindmap",
+    "mind"
+  ],
+  "license": "MIT",
+  "scripts": {
+    "dev": "vite build --watch",
+    "build": "vite build",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs",
+    "prepublishOnly": "npm run build"
+  },
+  "devDependencies": {
+    "@types/node": "^24.0.4",
+    "prettier": "^3.6.2",
+    "typescript": "^5.8.3",
+    "vite": "^7.0.0",
+    "vite-plugin-dts": "^4.5.4",
+    "vite-plugin-static-copy": "^3.1.0",
+    "vitepress": "^2.0.0-alpha.0"
+  },
+  "repository": {
+    "url": "git+https://github.com/LiDengHui/vitepress-plugin-mindmap.git",
+    "type": "git"
+  },
+  "optionalDependencies": {
+    "vue": "^3.5.17"
+  },
+  "peerDependencies": {
+    "@dhlx/delay": "^0.0.5",
+    "markmap-lib": "^0.18.12",
+    "markmap-view": "^0.18.12"
+  }
 }
