--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,15 +2,15 @@
     "compilerOptions": {
         "target": "ESNext",
         "useDefineForClassFields": true,
-        "module": "ESNext",
+        "module": "NodeNext",
         "lib": [
             "ES2020",
             "DOM",
-            "DOM.Iterable"
+            "DOM.Iterable",
         ],
         "skipLibCheck": true,
         /* Bundler mode */
-        "moduleResolution": "Bundler",
+        "moduleResolution": "NodeNext",
         "allowImportingTsExtensions": true,
         "resolveJsonModule": true,
         "isolatedModules": true,
@@ -19,10 +19,11 @@
         "strict": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
-        "noFallthroughCasesInSwitch": true
+        "noFallthroughCasesInSwitch": true,
+        "declaration": true,
+        "declarationDir": "dist",
     },
     "include": [
         "src/*",
-        "vite.config.ts"
     ]
 }
