--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "name": "@dhlx/vitepress-plugin-mindmap",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "vitepress plugin mindmap",
   "type": "module",
   "files": [
-    "dist",
-    "src/index.d.ts"
+    "dist"
   ],
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
-  "types": "./dist/src/index.d.ts",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "types": "./dist/src/index.d.ts",
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
     },
